# ampbench-predictors

./: .gitignore  README.md  example.fasta  predict_sequences.py  pyproject.toml
models/: broad-classifier.json  hemolytic-classifier.json  species-acinetobacterbaumannii-classifier.json  species-escherichiacoli-classifier.json  species-klebsiellapneumoniae-classifier.json  species-pseudomonasaeruginosa-classifier.json  species-staphylococcusaureus-classifier.json  strains-acinetobacterbaumanniiatcc19606-classifier.json  strains-escherichiacoliatcc25922-classifier.json  strains-klebsiellapneumoniaeatcc700603-classifier.json  strains-pseudomonasaeruginosaatcc27853-classifier.json  strains-staphylococcusaureusatcc25923-classifier.json  strains-staphylococcusaureusatcc33591-classifier.json  strains-staphylococcusaureusatcc43300-classifier.json
neurips-models/: broad-classifier.json  species-acinetobacterbaumannii-classifier.json  species-escherichiacoli-classifier.json  species-klebsiellapneumoniae-classifier.json  species-pseudomonasaeruginosa-classifier.json  species-staphylococcusaureus-classifier.json
omegamp/: classifiers.py  constants.py  predict.py  sequence_properties.py
