[build-system]
requires = ["flit_core >=3.7,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "omegamp"
dynamic = ["version", "description"]
dependencies = [
    "pandas",
    "scikit-learn",
    "xgboost",
    "modlamp",
    "biopython",
    "torch",
    "peptides",
    "peptidy",
    "numpy",
]
requires-python = ">= 3.11"
license = {text = "MIT"}

[tool.ruff]
line-length = 90
